--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,14 +7,18 @@ environment:
   sdk: '>=3.1.4 <4.0.0'
 
 dependencies:
+  animate_do: ^3.1.2
+  cupertino_icons: ^1.0.6
   dotted_border: ^2.1.0
   dotted_line: ^3.2.2
+  file_picker: ^6.1.1
   floating_navbar: ^2.0.2
   flutter:
     sdk: flutter
   flutter_floating_bottom_bar: ^1.2.0
   flutter_typeahead: ^4.8.0
   get: ^4.6.6
+  intl: ^0.18.1
   ionicons: ^0.2.2
   pretty_qr_code: ^3.0.0
   provider: ^6.1.1
@@ -34,6 +38,10 @@ flutter:
   - assets/images/quantumEvent.jpg
   - assets/images/logo.png
   - assets/icon/icon.png
+  - assets/images/onbording1.png
+  - assets/images/onbording2.png
+  - assets/images/onbording3.png
+  - assets/images/OrgProfile.jpg
 icons:
   android: true
   ios: true
