--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,13 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.4 <4.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
   animate_do: ^3.1.2
   cron: ^0.5.1
   cupertino_icons: ^1.0.6
+  dio: ^5.4.0
   dotted_border: ^2.1.0
   dotted_line: ^3.2.2
   file_picker: ^6.1.1
