--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,32 +4,36 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.1.4 <4.0.0'
 
 dependencies:
   animate_do: ^3.1.2
+  barcode_scan2: ^4.3.0
   cached_network_image: ^3.3.0
+  camera: ^0.10.5+9
   cron: ^0.5.1
   cupertino_icons: ^1.0.6
   dio: ^5.4.0
   dotted_border: ^2.1.0
   dotted_line: ^3.2.2
   file_picker: ^6.1.1
-  firebase_core: ^2.24.0
+  firebase_core: ^2.24.2
+  firebase_messaging: ^14.7.10
+  firebase_storage: ^11.5.6
   floating_navbar: ^2.0.2
   flutter:
     sdk: flutter
-  flutter_floating_bottom_bar: ^1.2.0
-  flutter_typeahead: ^4.8.0
+  flutter_local_notifications: ^16.3.0
   get: ^4.6.6
-  http: ^1.1.0
-  intl: ^0.18.1
+  image: ^4.1.3
+  intl: ^0.19.0
   ionicons: ^0.2.2
+  permission_handler: ^11.0.1
   pretty_qr_code: ^3.0.0
   provider: ^6.1.1
   pull_to_refresh: ^2.0.0
   qr_flutter: ^4.1.0
-  sqflite: ^2.3.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -40,8 +44,10 @@ flutter:
   uses-material-design: true
   assets: 
   - assets/images/
+  - assets/images/notification.png
   - assets/icon/
 icons:
   android: true
   ios: true
   image_path: assets/icon/icon.png
+
